--- a/styles.css
+++ b/styles.css
@@ -44,8 +44,8 @@ div.tooltip {
     padding: 8px;
     font: 10px sans-serif;
     background-color: #DEDEDE; 
-    border: 0px;
-    border-radius: 8px;
+    border: solid 2px;
+    border-radius: 4px;
     pointer-events: none;
 
 }
